--- a/shop.html
+++ b/shop.html
@@ -9,56 +9,40 @@
   	<header class="main-header">
   		<div class="container">
 
-  			<img src="http://placehold.it/150x72" class="logo-small" width="150" height="72" alt="Барбершоп «Бородинский»">
-
   			<nav class="main-nav">
-  				<ul>
-  					<li>
-  						<a href="info.html">Информация</a>
-  					</li>
-  					<li>
-  						<a href="news.html">Новости</a>
-  					</li>
-  					<li>
-  						<a href="price.html">Прайс-лист</a>
-  					</li>
-  					<li>
-  						<a href="shop.html">Магазин</a>
-  					</li>
-  					<li>
-  						<a href="contacts.html">Контакты</a>
-  					</li>
-  				</ul>
+          <a href="#" class="main-nav__logo">
+            <img src="http://placehold.it/150x72" width="150" height="72" alt="Барбершоп «Бородинский»">
+          </a>
+  				<section class="main-nav__pages">
+  					<a href="#">Информация</a>
+  					<a href="#">Новости</a>
+  					<a href="#">Прайс-лист</a>
+  					<a href="#">Магазин</a>
+  					<a href="#">Контакты</a>
+  				</section>
   			</nav>
 
-  			<div class="user-block">
+  			<section class="user-block">
   				<a href="#">Вход</a>
-  			</div>
+  			</section>
 
   		</div>
   	</header>
 
   	<main class="container">
 
-  		<section class="breadcrumbs">
-  			<h1>Средства для ухода</h1>
-  			<ul>
-  				<li>
-  					<a href="#">Главная</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a>Средства для ухода</a>
-  				</li>
-  			</ul>
-  		</section>
+      <h1>Средства для ухода</h1>
+
+      <section class="breadcrumbs">
+        <a href="#">Главная</a>
+        <a href="#">Магазин</a>
+        <a href="#">Средства для ухода</a>
+      </section>
 
   		<form class="shop-sidebar" action="#" method="post">
 
-  			<section class="shop-filter">
-  				<h2>Производители:</h2>
+        <fieldset class="shop-filter">
+          <legend>Производители:</legend>
   				<label class="shop-filter__item">
 	  				<input type="checkbox" class="shop-filter__input shop-filter__input_checkbox" name="shop-filter-company" value="Baxter of California">Baxter of California
 	  			</label>
@@ -72,15 +56,15 @@
   					<input type="checkbox" class="shop-filter__input shop-filter__input_checkbox" name="shop-filter-company" value="Malin+Goetz">Malin+Goetz
 	  			</label>
 	  			<label class="shop-filter__item">
-  					<input type="checkbox" class="shop-filter__input shop-filter__input_checkbox" name="shop-filter-company" value="Murray's">Murray's
+  					<input type="checkbox" class="shop-filter__input shop-filter__input_checkbox" name="shop-filter-company" value="Murrays">Murray's
 	  			</label>
 	  			<label class="shop-filter__item">
   					<input type="checkbox" class="shop-filter__input shop-filter__input_checkbox" name="shop-filter-company" value="American Crew">American Crew
 	  			</label>
-  			</section>
+        </fieldset>
 
-  			<section class="shop-filter">
-  				<h2>Группы товаров:</h2>
+        <fieldset class="shop-filter">
+          <legend>Группы товаров:</legend>
   				<label class="shop-filter__item">
 	  				<input type="radio" class="shop-filter__input shop-filter__input_radio" name="shop-filter-group" value="Бритвенные принадлежности">Бритвенные принадлежности
 	  			</label>
@@ -90,7 +74,7 @@
 	  			<label class="shop-filter__item">
   					<input type="radio" class="shop-filter__input shop-filter__input_radio" name="shop-filter-group" value="Аксессуары">Аксессуары
 	  			</label>
-  			</section>
+  			</fieldset>
 
   			<button type="submit" class="btn btn_shop-filter">Показать</button>
 
@@ -101,76 +85,106 @@
   			<section class="shop-items">
 
   				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Набор для путешествий «Baxter of California»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">2 900 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
+            <a href="#" class="shop-item__preview">
+  				    <img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Набор для путешествий</p>
+                <p>«Baxter of California»</p>
+              </h2>
+            </a>
+						<section class="buy-block">
+							<div class="buy-block__price">2 900 руб.</div>
+							<a href="#" class="btn btn_buy-block">Купить</a>
+						</section>
   				</article>
 
-  				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Увлажняющий кондиционер «Baxter of California»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">750 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
-  				</article>
+          <article class="shop-item">
+            <a href="#" class="shop-item__preview">
+              <img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Увлажняющий кондиционер</p>
+                <p>«Baxter of California»</p>
+              </h2>
+            </a>
+            <section class="buy-block">
+              <div class="buy-block__price">750 руб.</div>
+              <a href="#" class="btn btn_buy-block">Купить</a>
+            </section>
+          </article>
 
-  				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Гель для волос «SUAVECITO»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Гель для волос «SUAVECITO»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">290 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
-  				</article>
+          <article class="shop-item">
+            <a href="#" class="shop-item__preview">
+              <img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Гель для волос</p>
+                <p>«SUAVECITO»</p>
+              </h2>
+            </a>
+            <section class="buy-block">
+              <div class="buy-block__price">290 руб.</div>
+              <a href="#" class="btn btn_buy-block">Купить</a>
+            </section>
+          </article>
 
-  				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Глина для укладки волос «American crew»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Глина для укладки волос «American crew»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">500 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
-  				</article>
+          <article class="shop-item">
+            <a href="#" class="shop-item__preview">
+              <img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос «American crew»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Глина для укладки волос</p>
+                <p>«American crew»</p>
+              </h2>
+            </a>
+            <section class="buy-block">
+              <div class="buy-block__price">500 руб.</div>
+              <a href="#" class="btn btn_buy-block">Купить</a>
+            </section>
+          </article>
 
-  				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Гель для волос «AMERICAN CREW»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">300 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
-  				</article>
+          <article class="shop-item">
+            <a href="#" class="shop-item__preview">
+              <img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Гель для волос</p>
+                <p>«AMERICAN CREW»</p>
+              </h2>
+            </a>
+            <section class="buy-block">
+              <div class="buy-block__price">300 руб.</div>
+              <a href="#" class="btn btn_buy-block">Купить</a>
+            </section>
+          </article>
 
-  				<article class="shop-item">
-  					<img src="http://placehold.it/220x165" class="shop-item__preview" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-  					<section class="shop-item__info">
-  						<h3 class="shop-item__title">Набор для бритья «Baxter of California»</h3>
-  						<section class="shop-item__buy-block">
-  							<div class="shop-item__price">3 900 руб.</div>
-  							<a href="#" class="btn btn_shop-item">Купить</a>
-  						</section>
-  					</section>
-  				</article>
+          <article class="shop-item">
+            <a href="#" class="shop-item__preview">
+              <img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+            </a>
+            <a href="#" class="shop-item__title">
+              <h2>
+                <p>Набор для бритья</p>
+                <p>«Baxter of California»</p>
+              </h2>
+            </a>
+            <section class="buy-block">
+              <div class="buy-block__price">3 900 руб.</div>
+              <a href="#" class="btn btn_buy-block">Купить</a>
+            </section>
+          </article>
 
   			</section>
 
   			<section class="shop-nav">
   				<a href="#" class="btn btn_shop-nav">1</a>
-  				<a href="#" class="btn btn_shop-nav btn_active">2</a>
+  				<a href="#" class="btn btn_shop-nav">2</a>
   				<a href="#" class="btn btn_shop-nav">3</a>
   				<a href="#" class="btn btn_shop-nav">4</a>
   			</section>
@@ -197,7 +211,7 @@
 
       <section class="footer-copyright">
         <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="btn btn_copyright" href="https://htmlacademy.ru">HTML Academy</a>
       </section>
 
   	</footer>
