разметка страницы магазина и страницы товара

--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
       <section class="breadcrumbs">
         <a href="#">Главная</a>
         <a href="#">Магазин</a>
-        <a href="#">Средства для ухода</a>
+        <a>Средства для ухода</a>
       </section>
 
   		<form class="shop-sidebar" action="#" method="post">
