--- a/item.html
+++ b/item.html
@@ -6,48 +6,55 @@
   </head>
   <body>
 
-  	<header class="main-header">
-  		<div class="container">
+    <header class="main-header">
+      <div class="container">
 
-  			<nav class="main-nav">
-          <a href="#" class="main-nav__logo">
-            <img src="http://placehold.it/150x72" width="150" height="72" alt="Барбершоп «Бородинский»">
-          </a>
-  				<section class="main-nav__pages">
-  					<a href="#">Информация</a>
-  					<a href="#">Новости</a>
-  					<a href="#">Прайс-лист</a>
-  					<a href="#">Магазин</a>
-  					<a href="#">Контакты</a>
-  				</section>
-  			</nav>
+        <a href="#" class="logo">
+          <img src="http://placehold.it/150x72" width="150" height="72" alt="Барбершоп «Бородинский»">
+        </a>
 
-  			<section class="user-block">
-  				<a href="#">Вход</a>
-  			</section>
+        <nav class="main-nav">
+          <a href="#">Информация</a>
+          <a href="#">Новости</a>
+          <a href="#">Прайс-лист</a>
+          <a href="#" class="active">Магазин</a>
+          <a href="#">Контакты</a>
+        </nav>
 
-  		</div>
-  	</header>
+        <a href="#" class="user-block">Вход</a>
 
-  	<main class="container">
+      </div>
+    </header>
+
+    <main class="container">
 
       <h1>Набор для путешествий «Baxter of California»</h1>
 
-      <section class="breadcrumbs">
+      <div class="breadcrumbs">
         <a href="#">Главная</a>
         <a href="#">Магазин</a>
         <a href="#">Средства для ухода</a>
         <a>Набор для путешествий «Baxter of California»</a>
-      </section>
+      </div>
 
       <section class="item-gallery">
-        <img src="http://placehold.it/460x498" width="460" height="498" alt="Набор для путешествий «Baxter of California»">
-        <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
-        <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
-        <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
+        <div class="item-gallery__big-photo">
+          <img src="http://placehold.it/460x498" width="460" height="498" alt="Набор для путешествий «Baxter of California»">
+        </div>
+        <div class="item-gallery__preview">
+          <a href="#">
+            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
+          </a>
+          <a href="#">
+            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
+          </a>
+          <a href="#">
+            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий «Baxter of California»">
+          </a>
+        </div>
       </section>
 
-  		<div class="item-main">
+      <section class="item">
 
         <p class="item__in-store">Есть в наличии</p>
 
@@ -55,10 +62,10 @@
 
         <p class="item__description">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 
-        <section class="buy-block buy-block_item">
+        <div class="buy-block">
           <div class="buy-block__price">2 900 руб.</div>
-          <a href="#" class="btn btn_buy-block">Купить</a>
-        </section>
+          <a href="#" class="buy-block__btn">Купить</a>
+        </div>
 
         <h2 class="item__list-title">В набор входят:</h2>
 
@@ -70,32 +77,34 @@
           <li>Удобная кожаная косметичка</li>
         </ul>
 
-  		</div>
-
-  	</main>
-
-  	<footer class="main-footer">
-  		
-  		<section class="footer-contacts">
-  			Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="#">Как нас найти?</a><br>
-        Телефон: +7 (495) 666-02-66
-  		</section>
-
-  		<section class="footer-social">
-        <p>Давайте дружить!</p>
-        <a class="btn btn_social-vk" href="#">Вконтакте</a>
-        <a class="btn btn_social-fb" href="#">Фейсбук</a>
-        <a class="btn btn_social-inst" href="#">Инстаграм</a>
       </section>
 
-      <section class="footer-copyright">
-        <p>Разработано:</p>
-        <a class="btn btn_copyright" href="https://htmlacademy.ru">HTML Academy</a>
-      </section>
+    </main>
 
-  	</footer>
+    <footer class="main-footer">
+      <div class="container">
+
+        <section class="contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (495) 666-02-66
+        </section>
+
+        <section class="social">
+          <p class="social__title">Давайте дружить!</p>
+          <a class="social__btn social__btn_vk" href="#">Вконтакте</a>
+          <a class="social__btn social__btn_fb" href="#">Фейсбук</a>
+          <a class="social__btn social__btn_inst" href="#">Инстаграм</a>
+        </section>
+
+        <section class="copyright">
+          <p class="copyright__title">Разработано:</p>
+          <a class="copyright__btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </section>
+
+      </div>
+    </footer>
 
   </body>
 </html>
